Changed .NET Version all 2016 products

--- a/AwesomeAppIdea.AutoCAD.2017/AwesomeAppIdea.AutoCAD.2017.csproj
+++ b/AwesomeAppIdea.AutoCAD.2017/AwesomeAppIdea.AutoCAD.2017.csproj
@@ -26,7 +26,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;ACAD</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;ACAD, ACAD2017</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
