--- a/AwesomeAppIdea.Revit.2016/AwesomeAppIdea.Revit.2016.csproj
+++ b/AwesomeAppIdea.Revit.2016/AwesomeAppIdea.Revit.2016.csproj
@@ -5,6 +5,7 @@
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
       None
     </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,7 +14,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>AwesomeAppIdea.Revit</RootNamespace>
     <AssemblyName>AwesomeAppIdea.Revit.2016</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <CustomAfterMicrosoftCommonTargets>$(MSBuildProjectDirectory)\..\MS Build\AwesomeAppIdea.AfterBuild.Targets</CustomAfterMicrosoftCommonTargets>
